--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,28 @@
   display: flex;
   flex-direction: column;
   gap: 10rem;
+  overflow-x: hidden;
 
   font-family: 'Kanit', sans-serif;
+}
+
+/**=============== BREAKPOINTS ===============*/
+/* For large devices */
+@media screen and (max-width: 992px) {
+
+}
+
+/* For medium devices */
+@media screen and (max-width: 990px) {
+  .app {
+    gap: 8rem;
+  }
+}
+
+@media screen and (max-width: 770px) {
+}
+
+/* For small devices */
+@media screen and (max-width: 640px) {
+
 }
