--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -2,17 +2,22 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 .footer__content {
-  margin-left: 1rem;
-
   display: flex;
-  flex-direction: column;
   align-items: center;
+  gap: 1rem;
 }
 
 .footer__logo {
+  width: 90px;
+  height: 90px;
+  border-radius: 100%;
+}
+
+.footer__logo_porAlgoMaior {
   width: 90px;
   height: 90px;
   border-radius: 100%;
@@ -33,4 +38,63 @@
 .footer__social {
   display: flex;
   gap: 1rem;
+}
+
+/*=============== BREAKPOINTS ===============*/
+/* For large devices */
+@media screen and (max-width: 992px) {
+
+}
+
+/* For medium devices */
+@media screen and (max-width: 990px) {
+  .footer__container {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 1rem;
+  }
+  
+  .footer__content {
+    margin-left: 0;
+  
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .footer__logo {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+  }
+
+  
+  .footer__spotify {
+    width: 40px;
+    height: 40px;
+    margin-top: 4px;
+  }
+
+  .footer__logo_porAlgoMaior {
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+  }
+  
+  .footer__title {
+    font-size: large;
+
+    margin-top: 9px;
+    margin-left: 9px;
+  
+    color: whitesmoke
+  }
+}
+
+@media screen and (max-width: 770px) {
+}
+
+/* For small devices */
+@media screen and (max-width: 640px) {
+
 }
