--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -52,3 +52,46 @@
   -webkit-text-fill-color: transparent;
   color: whitesmoke;
 }
+
+/*=============== BREAKPOINTS ===============*/
+/* For large devices */
+@media screen and (max-width: 992px) {
+
+}
+
+/* For medium devices */
+@media screen and (max-width: 990px) {
+  .header__container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: -4rem;
+  }
+
+  .header__content {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .header__logo {
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+  }
+
+  .header__title {
+    font-size: larger;
+    margin-top: -8px;
+  }
+
+  .header__nav {
+    visibility: hidden;
+  }
+}
+
+@media screen and (max-width: 770px) {
+}
+
+/* For small devices */
+@media screen and (max-width: 640px) {
+
+}
