--- a/src/components/hero/form/form.module.css
+++ b/src/components/hero/form/form.module.css
@@ -25,7 +25,7 @@
 }
 
 .form__input {
-  padding: 2rem;
+  padding: 1rem;
 
   width: 20rem;
 
@@ -49,4 +49,60 @@
   
   font-size: large;
   font-weight: bold;
+}
+
+/**=============== BREAKPOINTS ===============*/
+/* For large devices */
+@media screen and (max-width: 992px) {
+
+}
+
+/* For medium devices */
+@media screen and (max-width: 990px) {
+  .form__container {
+    order: 2;
+  }
+
+  .form__textlabel {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+  
+    font-size: large;
+  }
+  
+  .form__input {
+    padding: 1rem;
+  
+    width: 20rem;
+  
+    border-radius: 25px 25px 25px 25px;
+  
+    border: none;
+  
+    text-align: center;
+  }
+  
+  .form__button {
+    margin-top: 5rem;
+  
+    padding: 1.2rem;
+    width: 12rem;
+  
+    border-radius: 2rem;
+    border: none;
+  
+    background: linear-gradient( -110grad, green, greenyellow);
+    
+    font-size: large;
+    font-weight: bold;
+  }
+}
+
+@media screen and (max-width: 770px) {
+}
+
+/* For small devices */
+@media screen and (max-width: 640px) {
+
 }
