--- a/src/components/local/local.module.css
+++ b/src/components/local/local.module.css
@@ -55,3 +55,71 @@
   border-radius: 0 50px 50px 0;
   border: 4px solid green;
 }
+
+/**=============== BREAKPOINTS ===============*/
+/* For large devices */
+@media screen and (max-width: 992px) {
+
+}
+
+/* For medium devices */
+@media screen and (max-width: 990px) {
+  .local__title {
+    font-size: x-large;
+  
+    margin-left: 6rem;
+  
+    color: whitesmoke;
+  }
+  
+  .local__subtitle {
+    font-size: larger;
+  
+    margin-right: 6rem;
+  
+    color: whitesmoke;
+  }
+  
+  .local__slogan {
+    position: relative;
+    padding-left: 2.8rem;
+  }
+  
+  .local__slogan::before {
+    content: '';
+    position: absolute;
+    width: 8rem;
+    height: 2px;
+    background-color: whitesmoke;
+    left: 0;
+    top: -6px;
+  }
+
+  .local__content {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .local__image {
+    background-image: url('../../assets/WhatsApp\ Image\ 2023-06-05\ at\ 17.59.43.jpeg');
+
+    width: 45%;
+    height: 280px;
+  }
+  
+  .local__map {
+    width: 45%;
+    height: 280px;
+  
+    border-radius: 0 50px 50px 0;
+    border: 4px solid green;
+  }
+}
+
+@media screen and (max-width: 770px) {
+}
+
+/* For small devices */
+@media screen and (max-width: 640px) {
+
+}
