--- a/src/components/programming/programming.module.css
+++ b/src/components/programming/programming.module.css
@@ -79,3 +79,99 @@
   border-left: 2px solid whitesmoke;
   padding-left: 6rem;
 }
+
+/**=============== BREAKPOINTS ===============*/
+/* For large devices */
+@media screen and (max-width: 992px) {
+
+}
+
+/* For medium devices */
+@media screen and (max-width: 990px) {
+  .programming__content {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
+  
+  .programming__title {
+    font-size: larger;
+  
+    margin-right: 6rem;
+  
+    color: whitesmoke;
+  }
+  
+  .programming__slogan {
+    position: relative;
+    padding-left: 2.8rem;
+  }
+  
+  .programming__slogan::before {
+    content: '';
+    position: absolute;
+    width: 8rem;
+    height: 2px;
+    background-color: whitesmoke;
+    left: 0;
+    top: -6px;
+  }
+
+  .programming__data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  .programming__data div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+  }
+  
+  .programming__data p {
+    font-size: large;
+    font-weight: bold;
+  }
+  
+  .programming__data span {
+    padding: 2px;
+    width: 14rem;
+  
+    background: linear-gradient( -110grad, green, greenyellow);
+  
+    border-radius: 25px;
+  
+    text-align: center;
+    font-size: medium;
+  }
+
+  .programming__dataTitle {
+    font-size: larger;
+  }
+  
+  .programming__culto {
+    margin-right: 0;
+  }
+  
+  .programming__congresso {
+    border-top: 2px solid whitesmoke;
+    border-left: none;
+
+    padding-top: 2rem;
+    padding-left: 0;
+    
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+}
+
+@media screen and (max-width: 770px) {
+}
+
+/* For small devices */
+@media screen and (max-width: 640px) {
+
+}
