--- a/src/components/local/local.module.css
+++ b/src/components/local/local.module.css
@@ -101,7 +101,7 @@
   }
   
   .local__image {
-    background-image: url('../../assets/WhatsApp\ Image\ 2023-06-05\ at\ 17.59.43.jpeg');
+    background-image: url('../../assets/localImageMobile.jpeg');
 
     width: 45%;
     height: 280px;
