--- a/src/components/about/imagesCarrossel.module.css
+++ b/src/components/about/imagesCarrossel.module.css
@@ -9,27 +9,42 @@
 
 /**=============== BREAKPOINTS ===============*/
 /* For large devices */
-@media screen and (max-width: 992px) {
-
-}
-
-/* For medium devices */
-@media screen and (max-width: 990px) {
-
-}
-
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 1300px) {
   .imagesCarrossel__container {
-    width: 350px;
+    width: 800px;
+    margin-left: -14px;
   }
   
   .imagesCarrossel__image {
-    width: 350px;
-    height: 250px;
+    width: 800px;
+    height: 580px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .imagesCarrossel__container {
+    width: 760px;
+  }
+  
+  .imagesCarrossel__image {
+    width: 760px;
+    height: 460px;
+  }
+}
+
+/* For medium devices */
+@media screen and (max-width: 768px) {
+  .imagesCarrossel__container {
+    width: 530px;
+  }
+  
+  .imagesCarrossel__image {
+    width: 530px;
+    height: 400px;
   }
 }
 
 /* For small devices */
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 350px) {
 
 }
