--- a/src/components/hero/form/form.module.css
+++ b/src/components/hero/form/form.module.css
@@ -96,11 +96,90 @@
 /**=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
+  .form__container {
+    height: 38rem;
+  }
 
+  .form__textlabel {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+  
+    font-size: 22px;
+  }
+  
+  .form__input {
+    padding: 12px;
+  
+    width: 20rem;
+  
+    border-radius: 25px 25px 25px 25px;
+  
+    border: none;
+  
+    text-align: center;
+  }
+  
+  .form__button {
+    margin-top: 5rem;
+  
+    padding: 1rem;
+    width: 12rem;
+  
+    border-radius: 2rem;
+    border: none;
+  
+    background: linear-gradient( -110grad, green, greenyellow);
+    
+    font-size: large;
+    font-weight: bold;
+  }
+
+  .form__termos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-top: 1rem;
+    margin-bottom: -3rem;
+  }
+  
+  .form__checkbox {
+    width: 1rem;
+    height: 1rem;
+  
+    margin-right: 6px;
+  }
+  
+  .form__checkbox_text {
+    font-size: 13.8px;
+    text-align: center;
+  }
+
+  .modal__container {
+    padding: 20%;
+  }
+  
+  .modal__header {
+    background: linear-gradient( -110grad, #4F4F4F, #363636);
+  }
+  
+  .modal__title {
+    text-align: center;
+  }
+  
+  .modal__body {
+    background: linear-gradient( -110grad, greenyellow, green);
+    color: #363636;
+  
+    text-align: center;
+    font-size: large;
+    font-weight: 700;
+  }
 }
 
 /* For medium devices */
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 768px) {
   .form__container {
     order: 2;
   }
@@ -162,7 +241,6 @@
   }
 
   .modal__container {
-    margin-left: -2.5rem;
     padding: 20%;
   }
   
@@ -185,11 +263,7 @@
   }
 }
 
-@media screen and (max-width: 770px) {
-
-}
-
 /* For small devices */
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 350px) {
 
 }
