--- a/src/components/local/local.module.css
+++ b/src/components/local/local.module.css
@@ -12,14 +12,6 @@
   color: whitesmoke;
 }
 
-.local__subtitle {
-  font-size: larger;
-
-  margin-right: 6rem;
-
-  color: whitesmoke;
-}
-
 .local__slogan {
   position: relative;
   padding-left: 2.8rem;
@@ -58,16 +50,47 @@
 
 /**=============== BREAKPOINTS ===============*/
 /* For large devices */
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1300px) {
+  .local__image {
+    background-image: url('../../assets/localImageMobile.jpeg');
 
+    width: 45%;
+    height: 450px;
+  }
+  
+  .local__map {
+    width: 45%;
+    height: 450px;
+  
+    border-radius: 0 50px 50px 0;
+    border: 4px solid green;
+  }
+}
+
+@media screen and (max-width: 992px) {
+.local__content {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .local__image {
+    background-image: url('../../assets/localImageMobile.jpeg');
+
+    width: 45%;
+    height: 380px;
+  }
+  
+  .local__map {
+    width: 45%;
+    height: 380px;
+  
+    border-radius: 0 50px 50px 0;
+    border: 4px solid green;
+  }
 }
 
 /* For medium devices */
-@media screen and (max-width: 990px) {
-  
-}
-
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 768px) {
   .local__title {
     font-size: x-large;
   
@@ -121,6 +144,6 @@
 }
 
 /* For small devices */
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 350px) {
 
 }
