--- a/src/components/congress-theme/congressTheme.module.css
+++ b/src/components/congress-theme/congressTheme.module.css
@@ -121,7 +121,7 @@
 }
 
 /* For medium devices */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
   .congressTheme__container {
     display: flex;
     flex-direction: column;
@@ -163,6 +163,21 @@
 }
 
 /* For small devices */
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 585px) {
+  .congressTheme__title {
+    font-size: 18px;
+  }
 
+  .congressTheme__subtitle {
+  font-size: 16px;
+  }
+
+  .congressTheme__article {
+    width: 80%;
+  
+    color: whitesmoke;
+    
+    text-align: center;
+    font-size: 14px;
+  }
 }
