--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -117,7 +117,7 @@
 }
 
 /* For medium devices */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
   .footer__container {
     display: flex;
     justify-content: space-around;
@@ -162,6 +162,20 @@
 }
 
 /* For small devices */
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 585px) {
+  .footer__title {
+    font-size: 16px;
 
+    margin-top: 9px;
+    margin-left: -9px;
+
+    color: whitesmoke
+  }
+
+  .footer__logo_porAlgoMaior {
+    width: 44px;
+    height: 44px;
+    border-radius: 100%;
+  }
+  
 }
