--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -69,7 +69,7 @@
 }
 
 /* For medium devices */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
   .header__container {
     display: flex;
     flex-direction: column;
@@ -98,6 +98,15 @@
 }
 
 /* For small devices */
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 585px) {
+  .header__logo {
+    width: 52px;
+    height: 52px;
+    border-radius: 100%;
+  }
 
+  .header__title {
+    font-size: 19px;
+    margin-top: -8px;
+  }
 }
