--- a/src/components/hero/illustration/Illustration.module.css
+++ b/src/components/hero/illustration/Illustration.module.css
@@ -43,7 +43,7 @@
 }
 
 /* For medium devices */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
   .illustration__title {
     text-align: center;
     font-size: 3.5rem;
@@ -60,5 +60,18 @@
 }
 
 /* For small devices */
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 585px) {
+  .illustration__title {
+    text-align: center;
+    font-size: 2.8rem;
+  }
+
+  .illustration__gif {
+    width: 18rem;
+    height: 18rem;
+
+    margin-left: 2px;
+  
+    border-radius: 30px;
+  }
 }
