--- a/src/components/local/local.module.css
+++ b/src/components/local/local.module.css
@@ -90,7 +90,7 @@
 }
 
 /* For medium devices */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
   .local__title {
     font-size: x-large;
   
@@ -144,6 +144,14 @@
 }
 
 /* For small devices */
-@media screen and (max-width: 350px) {
-
+@media screen and (max-width: 585px) {
+  .local__image {
+    width: 45%;
+    height: 280px;
+  }
+  
+  .local__map {
+    width: 45%;
+    height: 280px;
+  }
 }
